# upwork-job-scraper

./: README.md  pyproject.toml
src/upwork_job_scraper/: __init__.py
src/upwork_job_scraper/job_scraper/: settings.py
src/upwork_job_scraper/job_scraper/spiders/: upwork.py
