[project]
name = "upwork-job-scraper"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "scrapy>=2.11.2",
    "yagmail>=0.15.293",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/upwork_job_scraper"]
